RESOLVED FIXED83614
REGRESSION (r108364): Tables on wikipedia not centering properly
https://bugs.webkit.org/show_bug.cgi?id=83614
Summary REGRESSION (r108364): Tables on wikipedia not centering properly
Dave Hyatt
Reported 2012-04-10 13:30:10 PDT
go to http://en.wikipedia.org/wiki/Towel_day -> the quotation showing the origin overlaps the box on the right, regardless of how wide you make the window. In Radar as: <rdar://problem/11177351> REGRESSION (r108364): Text overlaps the box on the right
Attachments
Patch (9.53 KB, patch)
2012-04-10 13:30 PDT, Dave Hyatt
webkit.review.bot: commit-queue-
Archive of layout-test-results from ec2-cr-linux-01 (6.41 MB, application/zip)
2012-04-10 19:25 PDT, WebKit Review Bot
no flags
Patch (1.42 MB, patch)
2012-04-11 11:00 PDT, Dave Hyatt
no flags
Patch (38.01 KB, patch)
2012-04-11 11:03 PDT, Dave Hyatt
mitz: review+
Dave Hyatt
Comment 1 2012-04-10 13:30:42 PDT
Eric Seidel (no email)
Comment 2 2012-04-10 14:23:50 PDT
We'll need a test.
Dave Hyatt
Comment 3 2012-04-10 14:28:27 PDT
(In reply to comment #2) > We'll need a test. It's not up for review yet. Checking ews first.
WebKit Review Bot
Comment 4 2012-04-10 19:25:52 PDT
Comment on attachment 136524 [details] Patch Attachment 136524 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/12381621 New failing tests: css2.1/20110323/replaced-elements-001.htm fast/regions/overflow-not-moving-below-floats-in-variable-width-regions.html
WebKit Review Bot
Comment 5 2012-04-10 19:25:58 PDT
Created attachment 136607 [details] Archive of layout-test-results from ec2-cr-linux-01 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-01 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Dave Hyatt
Comment 6 2012-04-11 11:00:43 PDT
Dave Hyatt
Comment 7 2012-04-11 11:03:30 PDT
mitz
Comment 8 2012-04-11 11:26:12 PDT
Comment on attachment 136707 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=136707&action=review > LayoutTests/ChangeLog:14 > + * platform/mac/fast/block/float/avoiding-float-centered-expected.png: Added. > + * platform/mac/fast/block/float/avoiding-float-centered-expected.txt: Added. Could be a ref test :)
Dave Hyatt
Comment 9 2012-04-11 11:37:04 PDT
Fixed in r113885.
Eric Seidel (no email)
Comment 10 2012-06-19 14:02:53 PDT
Note that this caused at least one change in behavior in eveonline.com: http://code.google.com/p/chromium/issues/detail?id=130069
Note You need to log in before you can comment on or make changes to this bug.