Source/WebCore: https://bugs.webkit.org/show_bug.cgi?id=83614 <rdar://problem/11177351>

REGRESSION: Table on wikipedia overlaps float on right hand side.

Revise how auto margins are resolved so that for objects that avoid floats, the available line
width is always used instead of the overall containing block width. computeLogicalWidth now
always properly computes inline margins (based off the object's current logicalTop() position)
and so the code in computeStartPositionDeltaForChildAvoidingFloats that recomputes inline
direction margins can now be removed.

Reviewed by Dan Bernstein.

Added new test in fast/block/float.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::computeStartPositionDeltaForChildAvoidingFloats):
(WebCore::RenderBlock::determineLogicalLeftPositionForChild):
* rendering/RenderBlock.h:
(RenderBlock):
* rendering/RenderBox.cpp:
(WebCore::RenderBox::containingBlockAvailableLineWidthInRegion):
(WebCore):
(WebCore::RenderBox::computeLogicalWidthInRegion):
(WebCore::RenderBox::renderBoxRegionInfo):
(WebCore::RenderBox::shrinkToAvoidFloats):
* rendering/RenderBox.h:
(RenderBox):
* rendering/RenderTable.cpp:
(WebCore::RenderTable::computeLogicalWidth):

LayoutTests: https://bugs.webkit.org/show_bug.cgi?id=83614

Improve how auto margins are handled on objects that avoid floats. Add a new test covering this
for tables and overflow sections and revise existing results. The CSS2.1 test in particular is
a progression.

Reviewed by Dan Bernstein.

* fast/block/float/avoiding-float-centered.html: Added.
* platform/mac/css2.1/20110323/replaced-elements-001-expected.txt:
* platform/mac/fast/block/float/avoiding-float-centered-expected.png: Added.
* platform/mac/fast/block/float/avoiding-float-centered-expected.txt: Added.
* platform/mac/fast/regions/overflow-not-moving-below-floats-in-variable-width-regions-expected.txt:



Canonical link: https://commits.webkit.org/101183@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113885 268f45cc-cd09-0410-ab3c-d52691b4dbfc